--- a/css/hammer.css
+++ b/css/hammer.css
@@ -49,11 +49,6 @@ html {
   margin: 0 auto;
 }
 
-.research img{
-  width: 500px;
-  height: 300px;
-}
-
 .concept img, .iteration img, .process img{
   width: 500px;
   height: 500px;
@@ -239,7 +234,6 @@ html {
 .description{
   display: flex;
   flex-flow: row wrap;
-  /* text-align: left; */
 }
 
 .description h2{
@@ -254,14 +248,14 @@ html {
 
 .description h5{
   margin-top: 0.5em;
-  /* text-align: center; */
 }
 
 /* DEMO  */
-/* .demo{
-  display: flex;
-  text-align: left;
-} */
+iframe{
+  width: 800px;
+  height: 450px;
+  margin-bottom: 1.0em;
+}
 
 /* THE PROCESS  */
 .process{
@@ -296,6 +290,70 @@ html {
 }
 
 /* RESEARCH  */
+
+.dots{
+  margin-bottom: 1.0em;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Caption text */
+.text {
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  
+}
+
+.text a{
+  color: blue;
+  background-color: white;
+  padding: 5px;
+}
+
+.text a:hover{
+  color: #283891;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
 /* INSIGHT  */
 
@@ -416,29 +474,24 @@ html {
 }
 
 /* SLIDER BUTTON  */
-.slider-button{
-  display: inline-block;
-  height: 10px;
-  width: 10px;
+.slider-button, .dot{
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
   margin: 0 2px;
-  border-radius: 5px;
   background-color: gray;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.slider-button:hover{
+.slider-button:hover, .dot:hover{
   background-color: lightgray;
 }
 
 /* ACTIVE IMAGE IN SLIDE SHOW  */
 .active-image{
   background-color: blue;
-}
-
-/* VIDEO  */
-iframe{
-  width: 800px;
-  height: 450px;
-  margin-bottom: 1.0em;
 }
 
 /* CONTAINER  */
