--- a/css/index.css
+++ b/css/index.css
@@ -234,9 +234,9 @@ html {
 }
 
 /* projects */
-#projects{
-    /* background-color: white; */
-}
+/* #projects{
+    background-color: white;
+} */
 
 #projects h2{
     /* margin-bottom: 0.75em; */
