--- a/css/index.css
+++ b/css/index.css
@@ -278,7 +278,7 @@ html {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    margin: 2.0em 10.0em;
+    margin: 2.0em 20.0em;
 }
 
 .myProjects a{
@@ -680,6 +680,12 @@ footer{
    
     .quote h1{
         font-size: 32px;
+    }
+}
+
+@media screen and (max-width: 900px){
+    .myProjects{
+        margin: 2.0em 0;
     }
 }
 
